Solucionando problemas con la imagen de fondo del Hero

--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,7 @@
 }
 
 .hero{
-    background-image: url(/img/right-4703934_1280.jpg);
+    background-image: url(../img/right-4703934_1280.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
